# ffmpeg

./: .gitignore
demo1/: CMakeLists.txt  Makefile  ffmpeg_audio  ffmpeg_audio.cpp  ffmpeg_demux  ffmpeg_demux.cpp  ffmpeg_dir  ffmpeg_dir.cpp  ffmpeg_encode_audio  ffmpeg_encode_audio.cpp  ffmpeg_encode_h264  ffmpeg_encode_h264.cpp  ffmpeg_encode_vedio  ffmpeg_encode_vedio.cpp  ffmpeg_fmt  ffmpeg_fmt.cpp  ffmpeg_log  ffmpeg_log.cpp  ffmpeg_mux  ffmpeg_mux.cpp  ffmpeg_resample  ffmpeg_resample.cpp  ffmpeg_rtmp  ffmpeg_rtmp.cpp  ffmpeg_swscale  ffmpeg_swscale.cpp  sdl_audio_pcm  sdl_audio_pcm.cpp
demo1/module/: FindFFMPEG.cmake
demo2/: Makefile  ffmpeg_audiopcm_play  ffmpeg_audiopcm_play.cpp  ffmpeg_test_audio_samplefmt  ffmpeg_test_audio_samplefmt.cpp
rtmp/: Makefile  printf_file  printf_file.c  rtmp_hello  rtmp_hello.cpp
